themes/fab/css-2.0.0/style.css
/* ... */
.story_edit {
	padding: 12px;
}

/* ====== Charts Styles ======== */
#people label {
	display:block;
}

/* Ancestry chart */
.wt-ancestors-chart-list {
	background: transparent url(images/vline.png) left top repeat-y;
	margin: 0 0 0 15px;
	padding: 0;
	display: block;
}

[dir=rtl] .wt-ancestors-chart-list {
	margin: 0 15px 0 0;
	background-position: right top;
}

.wt-ancestors-chart-list-item {
	margin: 5px 0;
}

.chart_common li {
	list-style: outside none none;
}

.generations {
	background: transparent url("images/vline.png") repeat-y scroll left top;
	display: block;
	margin: 0 0 0 15px;
	padding: 0;
}

[dir="rtl"] .generations {
	margin: 0 15px 0 0;
	background-position: right top;
}

.chart_common table {
	padding: 0;
	border-spacing: 0;
	border-collapse: collapse;
	margin: 5px 0;
}

.chart_common td {
	border: 0;
	padding: 0;
}

.chart_common span.details1 div[class^=fact_] {
	display: inline-block;
}

.chart_common span.details1 .date {
	color: inherit;
}

/*-- Family book  --*/
#familybook_chart {
	margin-left: 10px;
}

#familybook_chart table {
	border-collapse: collapse;
	empty-cells: show;
}

#familybook_chart td {
	margin: 0;
	padding: 0;
}

#familybook_chart h2 {
	text-align: center;
}

#familybook_chart .line3,
#familybook_chart .pvline,
#familybook_chart .spacer {
	width: 3px;
}

#familybook_chart .line4 {
	width: 7px;
	vertical-align: middle;
}

[ID^="vline"] {
	width: 3px;
}

#familybook_chart h3 {
	color: #006;
	font-size: 16px;
	text-align: center;
}

[dir=rtl] #familybook_chart {
	margin-right: 10px;
}

/*-- Fan chart ---- */
.fan_chart_menu {
	position: absolute;
	display: none;
	z-index: 100;
}

#fan_chart ul {
	list-style-type: none;
	margin: 0;
}

#fan_chart_img {
	text-align: center;
}

/*-- Lifespan ---- */
#lifespan-chart {
	padding:    0 10px 10px;
	margin:     0 auto;
	min-height: 500px;
}

#lifespan-scale {
	background: transparent url(images/lifespan-chunk.png) repeat-x left bottom;
	display: inline-block;
	padding-bottom: 37px;
}

#lifespan-scale .date {
	display: inline-block;
	width:   70px;
}

[dir='rtl'] #lifespan-scale .date {
	text-align: right;
}

#lifespan-people {
	position: relative;
}

#lifespan-people > div {
	position: absolute;
	padding:  0;
}

#lifespan-people .itr {
	display: inline;
	white-space: nowrap;
}

#lifespan-people .popup div:first-of-type {
	font-weight: 900;
}

#lifespan-people .popup {
	left:        0;
	right:       auto;
	white-space: nowrap;
}

[dir='rtl'] #lifespan-people .popup {
	left:  auto;
	right: 0;
}

/*-- Pedigree ---- */
#pedigree_canvas {
	color:   #aaa;
}

#pedigree-page #childbox {
	border: 1px solid;
	background-color: #fff;
}

/*-- timeline  --*/
#timeline_chart {
	position: relative;
	top: 0;
	left: 0;
}

#field_table {
	width: 40%;
	min-width: 600px;
}

/*-- Relationship ---- */

#relationship-page .hline-text, #relationship-page .vline-text {
	font-size: 12px;
}

/* ====== Common Icons ========= */
[class^="icon-"],
[class*=" icon-"] {
	display: inline-block;
	vertical-align: middle;
	background-repeat: no-repeat;
}

.icon-add {
	width: 14px;
	height: 15px;
	background-image: url(images/add.png);
}

.icon-button_addmedia {
	width: 18px;
	height: 16px;
	background-image: url(images/buttons/addmedia.png);
	vertical-align: middle;
}

.icon-button_addnote {
	width: 17px;
	height: 15px;
	background-image: url(images/buttons/addnote.png);
}

.icon-button_addrepository {
	width: 15px;
	height: 15px;
	background-image: url(images/buttons/addrepository.png);
}

.icon-button_addsource {
	width: 18px;
	height: 16px;
	background-image: url(images/buttons/addsource.png);
}

.icon-button_family {
	width: 14px;
	height: 15px;
	background-image: url(images/buttons/family.png);
}

.icon-button_find {
	width: 17px;
	height: 15px;
	background-image: url(images/buttons/find.png);
}

.icon-button_find_facts {
	width: 20px;
	height: 20px;
	background-image: url(images/buttons/find_facts.png);
}

.icon-button_head {
	width: 12px;
	height: 18px;
	background-image: url(images/buttons/head.png);
}

.icon-button_indi {
	width: 11px;
	height: 15px;
	background-image: url(images/buttons/indi.png);
}

.icon-button_media {
	width: 18px;
	height: 16px;
	background-image: url(images/buttons/media.png);
	vertical-align: middle;
}

.icon-button_note {
	width: 17px;
	height: 15px;
	background-image: url(images/buttons/note.png);
}

.icon-button_place {
	width: 15px;
	height: 15px;
	background-image: url(images/buttons/place.png);
	vertical-align: middle;
}

.icon-button_repository {
	width: 15px;
	height: 15px;
	background-image: url(images/buttons/repository.png);
}

.icon-button_source {
	width: 18px;
	height: 16px;
	background-image: url(images/buttons/source.png);
}

.icon-cfamily {
	width: 24px;
	height: 24px;
	background-image: url(images/cfamily.png);
}

.icon-childless {
	width: 25px;
	height: 25px;
	background-image: url(images/childless.png);
}

.icon-children {
	width: 16px;
	height: 16px;
	background-image: url(images/children.png);
}

.icon-clippings {
	width: 24px;
	height: 24px;
	background-image: url(images/clippings.png);
}

.icon-edit_indi {
	width: 25px;
	height: 25px;
	background-image: url(images/edit_indi.png);
}

.icon-fam-list {
	width: 24px;
	height: 24px;
	background-image: url(images/sfamily.png);
}

.icon-indi-list {
	width: 50px;
	height: 50px;
	background-image: url(images/indis.png);
}

.icon-loading-small {
	width: 16px;
	height: 16px;
	background-image: url(images/indicator.gif);
}

.icon-media {
	width: 24px;
	height: 24px;
	background-image: url(images/media.png);
}

.icon-media-list {
	width: 24px;
	height: 24px;
	background-image: url(images/media.png);
}

.icon-media-next {
	width: 20px;
	height: 20px;
	background-image: url(images/rdarrow.png);
}

.icon-media-play {
	width: 20px;
	height: 20px;
	background-image: url(images/rarrow.png);
}

.icon-media-shuffle {
	width: 10px;
	height: 10px;
	background-image: url(images/reorder.png);
}
/* ... */

